--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+# --------------------
 # Python
+# --------------------
 __pycache__/
 *.pyc
 *.pyo
@@ -7,11 +9,19 @@ __pycache__/
 env/
 venv/
 
-# OS
+# --------------------
+# Databases
+# --------------------
+*.db
+*.sqlite3
+
+# --------------------
+# Environment / Secrets
+# --------------------
+.env
+
+# --------------------
+# OS files
+# --------------------
 .DS_Store
 Thumbs.db
-
-# Secrets
-.env
-*.sqlite3
-agent_memory.db
